# jurisprudencia-stj-ws

./: .gitignore  README.md  acordaos.py  combined_output.csv  decisoes-monocraticas.py  main.py  pesquisa.json  pyproject.toml  requirements.txt  resultados-1a-pagina.html  script.py  url.txt
__execucoes__/2025_12_12_-_03_37_38 = 27 paginas em 30 min/: timestamps.txt
__execucoes__/2025_12_12_-_03_37_38 = 27 paginas em 30 min/Decisões Monocráticas (31.848)/csv/: pagina_1.csv  pagina_10.csv  pagina_11.csv  pagina_12.csv  pagina_13.csv  pagina_14.csv  pagina_15.csv  pagina_16.csv  pagina_17.csv  pagina_18.csv  pagina_19.csv  pagina_2.csv  pagina_20.csv  pagina_21.csv  pagina_22.csv  pagina_23.csv  pagina_24.csv  pagina_25.csv  pagina_26.csv  pagina_27.csv  pagina_3.csv  pagina_4.csv  pagina_5.csv  pagina_6.csv  pagina_7.csv  pagina_8.csv  pagina_9.csv
__execucoes__/2025_12_12_-_12_39_38 = 19 paginas em 17 min/: timestamps.txt
__execucoes__/2025_12_12_-_12_39_38 = 19 paginas em 17 min/Decisões Monocráticas (1.183)/csv/: pagina_1.csv  pagina_10.csv  pagina_11.csv  pagina_12.csv  pagina_13.csv  pagina_14.csv  (+13 more)
__execucoes__/2025_12_12_-_14_10_19/: timestamps.txt
__execucoes__/2025_12_12_-_14_20_20/: timestamps.txt
__execucoes__/2025_12_12_-_14_23_16 = success/: timestamps.txt
__execucoes__/2025_12_12_-_15_18_24/: timestamps.txt
__execucoes__/2025_12_12_-_15_18_24/csv/: Decisões Monocráticas (160) output.csv
functions/: extract.py  load.py  navigate.py  run.py  save.py  transform.py
functions/config/: constants.py  parsing.py
tests/: test_extract.py
(+26 files in other folders)
